Fixed topic clipping

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,6 +123,7 @@ header {
 	font-size: 200%;
 	opacity: .8;
 	letter-spacing: 4px;
+	z-index: 2;
 }
 
 a {
@@ -135,6 +136,7 @@ a {
 	position: fixed;
 	padding-left: 8px;
 	padding-top: 8px;
+	z-index: 3;
 }
 
 ::-webkit-scrollbar {
@@ -185,6 +187,7 @@ a {
 	margin-top: 15px;
 	font-size: 17px;
 	border: none;
+	z-index: 3;
 }
 /* button that opens search */
 #openSearch {
@@ -192,6 +195,7 @@ a {
 	right: 0px;
 	padding-right: 8px;
 	padding-top: 8px;
+	z-index: 3;
 }
 
 h3 {
